--- a/index.html
+++ b/index.html
@@ -1,15 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>That's me</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Welcome</h1>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To the moon and back</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <header id="header">
+        <h1>A Hatful of Dreams!</h1>
+        <nav>
+          <div>
+            <ul id="main-links">
+              <li>
+                <a>My journey so far</a>
+              </li>
+              <li>
+                <a>Why Founders & Coders</a>
+              </li>
+              <li>
+                <a>Contacts</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+    <main>
+        <img
+          src="https://i.stack.imgur.com/3Ap7t.jpg"
+          alt="Morpheus"
+          class="image"
+        />
+        <p class="quote">
+          <i
+            >"I've Been Up, And Been Down, And Been Up Again. Have I Learned
+            Aught? I've Learned From My Mistakes, But I've Had More Time To
+            Commit More Mistakes."</i
+          >
+        </p>
+    </main>
+    <div id="sidebar">Sidebar</div>
+    <div id="content1">Content1</div>
+    <div id="content2">Content2</div>
+    <div id="content3">Content3</div>
+    <footer>
+      <nav>
+        <div>
+          <ul id="main-links">
+            <li id="github">
+              <a href="https://github.com/danilo-cupido">
+                <!-- <img src="github.logo"> --> 
+                Github</a>
+            </li>
+            <li id="codewars">
+              <a href="https://www.codewars.com/users/danilo-cupido">
+                <!-- <img src="codewars.logo"> -->
+                Codewars</a>
+            </li>
+            <li id="freecodecamp">
+              <a href="https://www.freecodecamp.org/danilo-cupido">
+                <!-- <img src="freecodecamplogo"> --> 
+                freeCodeCamp</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </footer>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
