content and style update remove sidebar, content box3 and anchor tags text-decoration. Add dark mode button

--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
         <h1>A Hatful of Dreams!</h1>
         <nav>
           <div>
-            <ul id="main-links">
+            <ul class="main-links">
               <li>
-                <a>My journey so far</a>
+                <a href="#content1">My journey so far</a>
               </li>
               <li>
-                <a>Why Founders & Coders</a>
+                <a href="#content2">Why Founders & Coders</a>
               </li>
               <li>
-                <a>Contacts</a>
+                <a href="#footer">Contacts</a>
               </li>
             </ul>
           </div>
         </nav>
       </header>
     <main>
+      <button id="ligth_dark">Ligth to Dark</button>
         <img
           src="https://i.stack.imgur.com/3Ap7t.jpg"
           alt="Morpheus"
@@ -41,26 +42,26 @@
           >
         </p>
     </main>
-    <div id="sidebar">Sidebar</div>
-    <div id="content1">Content1</div>
-    <div id="content2">Content2</div>
-    <div id="content3">Content3</div>
-    <footer>
+    <!-- <div id="sidebar">Sidebar</div> -->
+    <div id="content1">My journey so far</div>
+    <div id="content2">Why Founders & Coders</div>
+    <!-- <div id="content3">Content3</div> -->
+    <footer id="footer">
       <nav>
         <div>
-          <ul id="main-links">
+          <ul class="main-links">
             <li id="github">
-              <a href="https://github.com/danilo-cupido">
+              <a href="https://github.com/danilo-cupido/FAC22-Application" target="_blank">
                 <!-- <img src="github.logo"> --> 
                 Github</a>
             </li>
             <li id="codewars">
-              <a href="https://www.codewars.com/users/danilo-cupido">
+              <a href="https://www.codewars.com/users/danilo-cupido" target="_blank">
                 <!-- <img src="codewars.logo"> -->
                 Codewars</a>
             </li>
             <li id="freecodecamp">
-              <a href="https://www.freecodecamp.org/danilo-cupido">
+              <a href="https://www.freecodecamp.org/danilo-cupido"target="_blank">
                 <!-- <img src="freecodecamplogo"> --> 
                 freeCodeCamp</a>
             </li>
