Change layout remove content sections, modify sidebar, change h1 color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <header id="header">
+      <header id="header" class="fixed">
         <h1>A Hatful of Dreams!</h1>
       </header>
     <main>
@@ -38,7 +38,7 @@
             Commit More Mistakes."</i>
         </p>
     </main>
-    <div id="sidebar">
+    <aside id="sidebar" class="fixed">
       <nav>
         <div>
           <ul class="side-links">
@@ -54,14 +54,14 @@
           </ul>
         </div>
       </nav>
-    </div>
-    <div id="content1">My journey so far. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    </aside>
+    <!-- <div id="content1" class="content">My journey so far. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
       Quas facere quis doloribus quia dolor qui exercitationem magnam tenetur tempora molestiae, nobis, minus, 
       consequuntur doloremque error libero? Ex nostrum eaque ut? Lorem ipsum dolor sit amet consectetur adipisicing elit. 
       Temporibus, incidunt, dicta asperiores animi similique minima a quam porro, consectetur ab velit. 
       Ipsa, impedit harum quos quasi cum voluptatum. Debitis, nisi.</div>
-    <div id="content2">Why Founders & Coders</div>
-    <footer id="footer">
+    <div id="content2" class="content">Why Founders & Coders</div> -->
+    <footer id="footer" class="fixed">
       <nav>
         <div>
           <ul class="main-links">
