change style change style of sidebar, h1 and h2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAC application</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/34b0f0d8d7.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/34b0f0d8d7.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   </head>
   <body>
@@ -14,86 +17,118 @@
       <header id="header" class="fixed">
         <h1>A Hatful of Dreams!</h1>
       </header>
-    <main>
-      <button id="light_dark">Light to Dark</button>
-      <section class="slideshow-container visible">
-        <h2>Bits of me</h2>
-        <figure class="carouselPhoto visible">
-          <img src="Images/Juggling.jpg"
-          alt="Juggler"/>
-          <figcaption><i>"Juggling is sometimes called the art of controlling patterns, controlling patterns in time and space."</i></figcaption>
-        </figure>
-        <figure class="carouselPhoto hidden">
-          <img src="Images/Books.jpg"
-          alt="Books"/>
-          <figcaption><i>"A reader lives a thousand lives before they die."</i></figcaption>
-        </figure>
-        <figure class="carouselPhoto hidden">
-          <img src="Images/Coffee.jpg" 
-          alt="Coffee"/>
-          <figcaption><i>"Black as the devil, hot as hell, pure as an angel, sweet as love."</i></figcaption>
-        </figure>
-        <figure class="carouselPhoto hidden">
-          <img src="Images/Bycicle.jpg" 
-          alt="Bycicle"/>
-          <figcaption><i>"I don’t ride a bike to add days to my life. I ride a bike to add life to my days"</i></figcaption>
-        </figure>
-        <figure class="carouselPhoto hidden">
-          <img src="Images/Cyberpunk.jpg" 
-          alt="SciFi"/>
-          <figcaption><i>"Science fiction is an argument with the universe."</i></figcaption>
-        </figure>
-        <button id="prev">&#10094;</button>
-        <button id="next">&#10095;</button>
-      </section>
-      <section class="journey hidden">
-        <h2>My journey so far</h2>
-      </section>
-      <section class="fac hidden">
-        <h2>Why Founders and Coders?</h2>
-      </section>
-      <section class="contacts hidden">
-        <h2>Contacts</h2>
-      </section>
-    </main>
-    <aside id="sidebar" class="fixed">
-      <nav>
+      <main>
+        <button id="light_dark">Light to Dark</button>
+        <section class="slideshow-container visible">
+          <h2>Bits of me</h2>
+          <figure class="carouselPhoto visible">
+            <img src="Images/Juggling.jpg" alt="Juggler" />
+            <figcaption>
+              <i
+                >"Juggling is sometimes called the art of controlling patterns,
+                controlling patterns in time and space."</i
+              >
+            </figcaption>
+          </figure>
+          <figure class="carouselPhoto hidden">
+            <img src="Images/Books.jpg" alt="Books" />
+            <figcaption>
+              <i>"A reader lives a thousand lives before they die."</i>
+            </figcaption>
+          </figure>
+          <figure class="carouselPhoto hidden">
+            <img src="Images/Coffee.jpg" alt="Coffee" />
+            <figcaption>
+              <i
+                >"Black as the devil, hot as hell, pure as an angel, sweet as
+                love."</i
+              >
+            </figcaption>
+          </figure>
+          <figure class="carouselPhoto hidden">
+            <img src="Images/Bycicle.jpg" alt="Bycicle" />
+            <figcaption>
+              <i
+                >"I don’t ride a bike to add days to my life. I ride a bike to
+                add life to my days"</i
+              >
+            </figcaption>
+          </figure>
+          <figure class="carouselPhoto hidden">
+            <img src="Images/Cyberpunk.jpg" alt="SciFi" />
+            <figcaption>
+              <i>"Science fiction is an argument with the universe."</i>
+            </figcaption>
+          </figure>
+          <button id="prev">&#10094;</button>
+          <button id="next">&#10095;</button>
+        </section>
+        <section class="journey hidden">
+          <h2>My journey</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
+            voluptas hic aperiam sequi iste repellendus quibusdam est
+            reprehenderit eius placeat saepe nihil tempora autem at a, illo aut
+            nulla!
+          </p>
+        </section>
+        <section class="fac hidden">
+          <h2>Why Founders And Coders?</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
+            voluptas hic aperiam sequi iste repellendus quibusdam est
+            reprehenderit eius placeat saepe nihil tempora autem at a, illo aut
+            nulla!
+          </p>
+        </section>
+        <section class="contacts hidden">
+          <h2>Contacts</h2>
+          <ul>
+            <li>emal</li>
+            <li>phone</li>
+            <li>linkedin</li>
+          </ul>
+        </section>
+      </main>
+      <aside id="sidebar" class="fixed">
+        <nav>
           <ul class="side-links">
-            <li id="home">
-              Bits of me
-            </li>
-            <li id="journey">
-              My journey so far
-            </li>
-            <li id="fac">
-              Why Founders & Coders
-            </li>
-            <li id="contacts">
-              Contacts
-            </li>
+            <li id="home">Bits of me</li>
+            <li id="journey">My journey</li>
+            <li id="fac">Why FAC</li>
+            <li id="contacts">Contacts</li>
           </ul>
-      </nav>
-    </aside>
-    <!-- <div id="content1" class="content">My journey so far. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Quas facere quis doloribus quia dolor qui exercitationem magnam tenetur tempora molestiae, nobis, minus, 
-      consequuntur doloremque error libero? Ex nostrum eaque ut? Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Temporibus, incidunt, dicta asperiores animi similique minima a quam porro, consectetur ab velit. 
-      Ipsa, impedit harum quos quasi cum voluptatum. Debitis, nisi.</div>
-    <div id="content2" class="content">Why Founders & Coders</div> -->
-    <footer id="footer" class="fixed">
-          <ul class="main-links">
-            <li id="github">
-              <a href="https://github.com/danilo-cupido/FAC22-Application" target="_blank"><i class="fab fa-github"></i></a>
-            </li>
-            <li id="codewars">
-              <a href="https://www.codewars.com/users/danilo-cupido" target="_blank"><span class="iconify" data-icon="cib:codewars" data-height="30px" data-inline="false"></span></a>
-            </li>
-            <li id="freecodecamp">
-              <a href="https://www.freecodecamp.org/danilo-cupido"target="_blank"><i class="fab fa-free-code-camp"></i></a>
-            </li>
-          </ul>
-    </footer>
-
+        </nav>
+      </aside>
+      <footer id="footer" class="fixed">
+        <ul class="main-links">
+          <li id="github">
+            <a
+              href="https://github.com/danilo-cupido/FAC22-Application"
+              target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+          </li>
+          <li id="codewars">
+            <a
+              href="https://www.codewars.com/users/danilo-cupido"
+              target="_blank"
+              ><span
+                class="iconify"
+                data-icon="cib:codewars"
+                data-height="30px"
+                data-inline="false"
+              ></span
+            ></a>
+          </li>
+          <li id="freecodecamp">
+            <a href="https://www.freecodecamp.org/danilo-cupido" target="_blank"
+              ><i class="fab fa-free-code-camp"></i
+            ></a>
+          </li>
+        </ul>
+      </footer>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
