fix carousel position fix buttons position, add some style

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <button id="prev">&#10094;</button>
           <button id="next">&#10095;</button>
         </section>
-        <section class="journey hidden">
+        <section class="content journey hidden">
           <h2>My journey</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
@@ -72,7 +72,7 @@
             nulla!
           </p>
         </section>
-        <section class="fac hidden">
+        <section class="content fac hidden">
           <h2>Why Founders And Coders?</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
@@ -81,7 +81,7 @@
             nulla!
           </p>
         </section>
-        <section class="contacts hidden">
+        <section class="content contacts hidden">
           <h2>Contacts</h2>
           <ul>
             <li>emal</li>
