change background style

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="container">
-      <header id="header" class="fixed">
+      <header id="header">
         <h1>A Hatful of Dreams!</h1>
       </header>
       <main>
         <button id="light_dark">Light to Dark</button>
         <section class="slideshow-container visible">
-          <h2>Bits of me</h2>
+          <h2>This, I like</h2>
           <figure class="carouselPhoto visible">
             <img src="Images/Juggling.jpg" alt="Juggler" />
             <figcaption>
@@ -93,7 +93,7 @@
       <aside id="sidebar" class="fixed">
         <nav>
           <ul class="side-links">
-            <li id="home">Bits of me</li>
+            <li id="home">This, I like</li>
             <li id="journey">My journey</li>
             <li id="fac">Why FAC</li>
             <li id="contacts">Contacts</li>
