fix carousel buttons style

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
               <i>"Science fiction is an argument with the universe."</i>
             </figcaption>
           </figure>
-          <button id="prev">&#10094;</button>
-          <button id="next">&#10095;</button>
+          <button class="prev" id="prev">&#10094;</button>
+          <button class="next" id="next">&#10095;</button>
         </section>
         <section class="content journey hidden">
           <h2>My journey</h2>
