media query and change dark mode button to icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <h1>A Hatful of Dreams!</h1>
       </header>
       <main>
-        <button id="light_dark">Light to Dark</button>
+        <button id="light_dark">
+          <i class="fas fa-sun"></i>
+          <i class="fas fa-long-arrow-alt-right"></i>
+          <i class="fas fa-moon"></i>
+        </button>
         <section class="slideshow-container visible">
           <h2>This, I like</h2>
           <figure class="carouselPhoto visible">
@@ -92,7 +96,7 @@
       </main>
       <aside id="sidebar" class="fixed">
         <nav>
-          <ul class="side-links">
+          <ul class="side-links-box">
             <li id="home">This, I like</li>
             <li id="journey">My journey</li>
             <li id="fac">Why FAC</li>
