add scroll and adjust media query

--- a/index.html
+++ b/index.html
@@ -68,16 +68,61 @@
           <button class="next" id="next">&#10095;</button>
         </section>
         <section class="content journey hidden">
-          <h2>My journey</h2>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
-            voluptas hic aperiam sequi iste repellendus quibusdam est
-            reprehenderit eius placeat saepe nihil tempora autem at a, illo aut
-            nulla!
-          </p>
+          <h2 class="innerTitle">My journey</h2>
+          <div class="text-container">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
+              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
+              reprehenderit eius placeat saepe nihil tempora autem at a, illo
+              aut nulla! Lorem ipsum dolor, sit amet consectetur adipisicing
+              elit. Ad dolores voluptas hic aperiam sequi iste repellendus
+              quibusdam est reprehenderit eius placeat saepe nihil tempora autem
+              at a, illo aut nulla!
+            </p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
+              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
+              reprehenderit eius placeat saepe nihil tempora autem at a, illo
+              aut nulla!
+            </p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
+              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
+              reprehenderit eius placeat saepe nihil tempora autem at a, illo
+              aut nulla! Lorem ipsum dolor, sit amet consectetur adipisicing
+              elit. Ad dolores voluptas hic aperiam sequi iste repellendus
+              quibusdam est reprehenderit eius placeat saepe nihil tempora autem
+              at a, illo aut nulla! Lorem ipsum dolor, sit amet consectetur
+              adipisicing elit. Ad dolores voluptas hic aperiam sequi iste
+              repellendus quibusdam est reprehenderit eius placeat saepe nihil
+              tempora autem at a, illo aut nulla! Lorem ipsum dolor, sit amet
+              consectetur adipisicing elit. Ad dolores voluptas hic aperiam
+              sequi iste repellendus quibusdam est reprehenderit eius placeat
+              saepe nihil tempora autem at a, illo aut nulla! Lorem ipsum dolor,
+              sit amet consectetur adipisicing elit. Ad dolores voluptas hic
+              aperiam sequi iste repellendus quibusdam est reprehenderit eius
+              placeat saepe nihil tempora autem at a, illo aut nulla! Lorem
+              ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
+              voluptas hic aperiam sequi iste repellendus quibusdam est
+              reprehenderit eius placeat saepe nihil tempora autem at a, illo
+              aut nulla! Lorem ipsum dolor, sit amet consectetur adipisicing
+              elit. Ad dolores voluptas hic aperiam sequi iste repellendus
+              quibusdam est reprehenderit eius placeat saepe nihil tempora autem
+              at a, illo aut nulla! Lorem ipsum dolor, sit amet consectetur
+              adipisicing elit. Ad dolores voluptas hic aperiam sequi iste
+              repellendus quibusdam est reprehenderit eius placeat saepe nihil
+              tempora autem at a, illo aut nulla!
+            </p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
+              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
+              reprehenderit eius placeat saepe nihil tempora autem at a, illo
+              aut nulla!
+            </p>
+          </div>
         </section>
         <section class="content fac hidden">
-          <h2>Why Founders And Coders?</h2>
+          <h2 class="innerTitle">Why Founders And Coders?</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
             voluptas hic aperiam sequi iste repellendus quibusdam est
@@ -86,7 +131,7 @@
           </p>
         </section>
         <section class="content contacts hidden">
-          <h2>Contacts</h2>
+          <h2 class="innerTitle">Contacts</h2>
           <ul>
             <li>emal</li>
             <li>phone</li>
