change sidebar hover and clicked effect, update eventListener dark mode and function display

--- a/index.html
+++ b/index.html
@@ -133,19 +133,32 @@
         <section class="content contacts hidden">
           <h2 class="innerTitle">Contacts</h2>
           <ul>
-            <li>emal</li>
-            <li>phone</li>
-            <li>linkedin</li>
+            <li>
+              <i class="far fa-envelope"></i>
+              <a href="mailto:danilocupido@gmail.com">danilocupido@gmail.com</a>
+            </li>
+            <li>
+              <i class="fas fa-mobile-alt"></i>
+              <a href="tel:00447818910600">+44 (0) 7818910600</a>
+            </li>
+            <li>
+              <i class="fab fa-linkedin-in"></i>
+              <a
+                href="https://www.linkedin.com/in/danilocupido/"
+                target="_blank"
+                >linkedin</a
+              >
+            </li>
           </ul>
         </section>
       </main>
       <aside id="sidebar" class="fixed">
         <nav>
           <ul class="side-links-box">
-            <li id="home">This, I like</li>
-            <li id="journey">My journey</li>
-            <li id="fac">Why FAC</li>
-            <li id="contacts">Contacts</li>
+            <li id="home" class="sideList lightHover">This, I like</li>
+            <li id="journey" class="sideList lightHover">My journey</li>
+            <li id="fac" class="sideList lightHover">Why FAC</li>
+            <li id="contacts" class="sideList lightHover">Contacts</li>
           </ul>
         </nav>
       </aside>
@@ -153,6 +166,7 @@
         <ul class="main-links">
           <li id="github">
             <a
+              class="footerList"
               href="https://github.com/danilo-cupido/FAC22-Application"
               target="_blank"
               ><i class="fab fa-github"></i
@@ -160,6 +174,7 @@
           </li>
           <li id="codewars">
             <a
+              class="footerList"
               href="https://www.codewars.com/users/danilo-cupido"
               target="_blank"
               ><span
@@ -171,7 +186,10 @@
             ></a>
           </li>
           <li id="freecodecamp">
-            <a href="https://www.freecodecamp.org/danilo-cupido" target="_blank"
+            <a
+              class="footerList"
+              href="https://www.freecodecamp.org/danilo-cupido"
+              target="_blank"
               ><i class="fab fa-free-code-camp"></i
             ></a>
           </li>
