add carousel play/pause function and play/pause button

--- a/index.html
+++ b/index.html
@@ -64,8 +64,14 @@
               <i>"Science fiction is an argument with the universe."</i>
             </figcaption>
           </figure>
-          <button class="prev" id="prev">&#10094;</button>
-          <button class="next" id="next">&#10095;</button>
+          <button class="carouselBtn" id="play">
+            <i class="fas fa-play"></i>
+          </button>
+          <button class="carouselBtn" id="pause">
+            <i class="fas fa-pause"></i>
+          </button>
+          <button class="carouselBtn" id="prev">&#10094;</button>
+          <button class="carouselBtn" id="next">&#10095;</button>
         </section>
         <section class="content journey hidden">
           <h2 class="innerTitle">My journey</h2>
