add text in my journey

--- a/index.html
+++ b/index.html
@@ -77,53 +77,40 @@
           <h2 class="innerTitle">My journey</h2>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
-              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
-              reprehenderit eius placeat saepe nihil tempora autem at a, illo
-              aut nulla! Lorem ipsum dolor, sit amet consectetur adipisicing
-              elit. Ad dolores voluptas hic aperiam sequi iste repellendus
-              quibusdam est reprehenderit eius placeat saepe nihil tempora autem
-              at a, illo aut nulla!
+              This journey unfolds in several places in space and four decades
+              in time.
             </p>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
-              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
-              reprehenderit eius placeat saepe nihil tempora autem at a, illo
-              aut nulla!
+              <b>EIGHTIES</b> We live in a beautiful village by a small lake in
+              the countryside. My childhood is happy! I grew up with my siblings
+              surrounded by the Nature. I’m a very curious child and my dream is
+              to be a scientist one day.
             </p>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
-              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
-              reprehenderit eius placeat saepe nihil tempora autem at a, illo
-              aut nulla! Lorem ipsum dolor, sit amet consectetur adipisicing
-              elit. Ad dolores voluptas hic aperiam sequi iste repellendus
-              quibusdam est reprehenderit eius placeat saepe nihil tempora autem
-              at a, illo aut nulla! Lorem ipsum dolor, sit amet consectetur
-              adipisicing elit. Ad dolores voluptas hic aperiam sequi iste
-              repellendus quibusdam est reprehenderit eius placeat saepe nihil
-              tempora autem at a, illo aut nulla! Lorem ipsum dolor, sit amet
-              consectetur adipisicing elit. Ad dolores voluptas hic aperiam
-              sequi iste repellendus quibusdam est reprehenderit eius placeat
-              saepe nihil tempora autem at a, illo aut nulla! Lorem ipsum dolor,
-              sit amet consectetur adipisicing elit. Ad dolores voluptas hic
-              aperiam sequi iste repellendus quibusdam est reprehenderit eius
-              placeat saepe nihil tempora autem at a, illo aut nulla! Lorem
-              ipsum dolor, sit amet consectetur adipisicing elit. Ad dolores
-              voluptas hic aperiam sequi iste repellendus quibusdam est
-              reprehenderit eius placeat saepe nihil tempora autem at a, illo
-              aut nulla! Lorem ipsum dolor, sit amet consectetur adipisicing
-              elit. Ad dolores voluptas hic aperiam sequi iste repellendus
-              quibusdam est reprehenderit eius placeat saepe nihil tempora autem
-              at a, illo aut nulla! Lorem ipsum dolor, sit amet consectetur
-              adipisicing elit. Ad dolores voluptas hic aperiam sequi iste
-              repellendus quibusdam est reprehenderit eius placeat saepe nihil
-              tempora autem at a, illo aut nulla!
+              <b>NINETIES</b> Hard times. We struggle to make ends meet. My
+              parents do everything they can to sustain me and my siblings.
             </p>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad
-              dolores voluptas hic aperiam sequi iste repellendus quibusdam est
-              reprehenderit eius placeat saepe nihil tempora autem at a, illo
-              aut nulla!
+              <b>ZEROS</b> I become and activist and get involved with matters
+              as global poverty, social justice, gender equality, digital
+              divide. I want to turn my activism in a profession so I enroll in
+              the public University and get a bachelor degree in Development
+              Studies.
+            </p>
+            <p>
+              <b>TENS - part one</b> I don’t speak English which is the language
+              of the International Cooperation. I decide to move to the UK to
+              follow a language class and find a job to help to sustain me.
+              After a series of unfortunate events a person invites me to stay
+              at their place (I’m homeless by now). Soon after I get a job in a
+              coffeeshop chain.
+            </p>
+            <p>
+              <b>TENS - part two</b> I meet the person that today is my wife. I
+              work for the same company for seven years. Time really flies!!
+              Financially wise I’m doing well but when I think about my original
+              aspirations I get depressed. I want to do something meaningful,
+              give my contribution to make this world a better place!
             </p>
           </div>
         </section>
