add coding section change journey text

--- a/index.html
+++ b/index.html
@@ -77,42 +77,36 @@
           <h2 class="innerTitle">My journey</h2>
           <div class="text-container">
             <p>
-              This journey unfolds in several places in space and four decades
-              in time.
-            </p>
-            <p>
-              <b>EIGHTIES</b> We live in a beautiful village by a small lake in
-              the countryside. My childhood is happy! I grew up with my siblings
-              surrounded by the Nature. I’m a very curious child and my dream is
-              to be a scientist one day.
-            </p>
-            <p>
-              <b>NINETIES</b> Hard times. We struggle to make ends meet. My
-              parents do everything they can to sustain me and my siblings.
-            </p>
-            <p>
-              <b>ZEROS</b> I become and activist and get involved with matters
-              as global poverty, social justice, gender equality, digital
-              divide. I want to turn my activism in a profession so I enroll in
-              the public University and get a bachelor degree in Development
-              Studies.
-            </p>
-            <p>
-              <b>TENS - part one</b> I don’t speak English which is the language
-              of the International Cooperation. I decide to move to the UK to
-              follow a language class and find a job to help to sustain me.
-              After a series of unfortunate events a person invites me to stay
-              at their place (I’m homeless by now). Soon after I get a job in a
-              coffeeshop chain.
-            </p>
-            <p>
-              <b>TENS - part two</b> I meet the person that today is my wife. I
-              work for the same company for seven years. Time really flies!!
-              Financially wise I’m doing well but when I think about my original
-              aspirations I get depressed. I want to do something meaningful,
-              give my contribution to make this world a better place!
+              I was born in Italy and lived most of my life in a beautiful
+              village by the lake. I’ve always been a daydreamer and growing up
+              I’ve become an idealist and activist. I got my bachelor degree in
+              Development Studies with the hope to find my way in some
+              Non-governmental organisations or Charities. Because of my total
+              lack of knowledge of the English language I decided to move to
+              London and stay for a short period of time in order to learn the
+              language. Here I worked as a barista until I lost my job due to
+              the recent pandemic. During this year I’ve learnt how valuable is
+              to live in a multicultural society and I made some very good
+              friends from every corner of the globe. And I’ve found the love of
+              my life!
             </p>
           </div>
+        </section>
+        <section class="content coding hidden">
+          <h2 class="innerTitle">Coding</h2>
+          <p>
+            My first contact with coding was in the middle of the eighties when
+            I was a child and me and my brother used to write some programmes in
+            Basic and run it on an MSX. During the high school I had the
+            opportunity to learn Turbo Pascal but by the time of the Uni I was
+            lost in Politics and Social Activism so I put my passion for coding
+            aside until a few months ago. Talking with my wife, who is a
+            developer, I told her of the passion I once had for coding and that
+            now I regret that I didn’t follow that path. She invited me to watch
+            some video tutorials and try freeCodeCamp. And now here we are!
+            Coding is my passion again and I would love to become a developer on
+            day!
+          </p>
         </section>
         <section class="content fac hidden">
           <h2 class="innerTitle">Why Founders And Coders?</h2>
@@ -150,6 +144,7 @@
           <ul class="side-links-box">
             <li id="home" class="sideList lightHover">This, I like</li>
             <li id="journey" class="sideList lightHover">My journey</li>
+            <li id="coding" class="sideList lightHover">Coding</li>
             <li id="fac" class="sideList lightHover">Why FAC</li>
             <li id="contacts" class="sideList lightHover">Contacts</li>
           </ul>
